added win screen+winning line animation+new game

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,12 @@
             <div class="game-cell"></div>
             <div class="game-cell"></div>
         </div>
+        <div id="line"></div>
+        <div class="winner" id="winner">
+            <div class="icon"><img src="" alt="" /></div>
+            <div class="title">AI won!</div>
+            <div class="new-game" onclick="game.start()">New Game</div>
+        </div>
     </body>
     <script src="script.js"></script>
 </html>
